--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Roboto-Medium';
+  src: local('Roboto-Medium'), url('./fonts/Roboto-Medium.ttf');
+}
+
 body {
   background-color: #ffe9e2;
 }
