--- a/src/components/ui/buttons/Buttons.module.css
+++ b/src/components/ui/buttons/Buttons.module.css
@@ -1,9 +1,13 @@
 .lightButton {
+  margin-bottom: 5px;
   color: black;
   border-radius: 8px;
   background: transparent;
   border: 1px black solid;
   padding: 5px 32px;
+  font-family: 'Roboto-Medium';
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .lightButton:hover {
@@ -15,7 +19,7 @@
   border-radius: 8px;
   background: #f55a5a;
   border: 0;
-  margin-top: 40px;
+
   color: white;
   font-size: 18px;
 }
@@ -24,5 +28,16 @@
 }
 
 .redButton:focus {
-  background: #e74848;
+  background: #ff9696;
+}
+
+.whiteButton {
+  height: 40px;
+  border-radius: 8px;
+  border: 1px solid var(--lightgrey, #949494);
+  background: var(--grey-lock, #f5f5f5);
+  color: var(--lightgrey, #949494);
+  font-family: 'Roboto-Medium';
+  font-size: 18px;
+  font-weight: 500;
 }
